[gd_scene load_steps=8 format=2]

[ext_resource path="res://BasicLevel.gd" type="Script" id=1]
[ext_resource path="res://assets/mp3s/Background-Water-Drops.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/mp3s/Death-Sound.mp3" type="AudioStream" id=3]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=6]
[ext_resource path="res://Goal.tscn" type="PackedScene" id=7]

[node name="Level3" type="Node2D"]
script = ExtResource( 1 )

[node name="CaveSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 15.0
autoplay = true

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( -212, -267 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="Ground" parent="." instance=ExtResource( 6 )]
position = Vector2( 9.53674e-07, 238 )
scale = Vector2( 60, 1 )

[node name="Goal" parent="." instance=ExtResource( 7 )]
position = Vector2( 2450, 76 )

[connection signal="killed" from="Player" to="." method="_on_Player_killed"]
[connection signal="finished" from="Goal" to="." method="_on_Goal_finished"]
